--- a/src/style/app.css
+++ b/src/style/app.css
@@ -5,7 +5,8 @@
 
 body{
     min-height: 100vh;
-    width: 100vw;
+    min-width: 360px;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     background-color: blue;
@@ -13,7 +14,8 @@ body{
 
 .layout{
     min-height: 100vh;
-    width: 100vw;
+    min-width: 360px;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
