--- a/src/style/app.css
+++ b/src/style/app.css
@@ -9,7 +9,7 @@ body{
     max-width: 100vw;
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    background-color: black;
 }
 
 .layout{
