--- a/src/components/views/homepage.module.css
+++ b/src/components/views/homepage.module.css
@@ -1,5 +1,13 @@
 .homepage{
-    min-height: 75vh;
-    background-color: blueviolet;
+    min-height: 50vh;
+    margin-top: 17vh;
     padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.bannerImg{
+    width: 100%;
 }
