--- a/src/style/app.css
+++ b/src/style/app.css
@@ -9,7 +9,7 @@ body{
     max-width: 100vw;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: rgb(160, 99, 181);
 }
 
 .layout{
@@ -19,5 +19,27 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgb(131, 131, 176);
+    position: relative;
+
 }
+/* 
+    background-image: url('../assets/backgroundFlags.jpg');
+
+    filter: grayscale(0.15);
+    background-size: 50vh;
+    background-position: center;
+    object-fit: cover;
+
+.bgFlag {
+    background-image: url('../assets/backgroundFlags.jpg');
+
+    filter: grayscale(0.2);
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 10vh;
+
+    height: 75vh;
+    
+}
+*/
