--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,11 +1,15 @@
 .footer{
-    padding: 20px;
+    
     background-color: rgb(199, 197, 197);
-    min-height: 20vh;
+    min-height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    max-width: 800px;
 }
 
 .some{
@@ -14,6 +18,7 @@
     flex-direction: row;
     justify-content: space-around;
     width: 90vw;
+    max-width: 750px;
 }
 
 .f,
