--- a/src/style/app.css
+++ b/src/style/app.css
@@ -7,15 +7,21 @@ body{
     min-height: 100vh;
     min-width: 360px;
     max-width: 100vw;
+
     display: flex;
     flex-direction: column;
-    background-color: rgb(160, 99, 181);
+    background-image: linear-gradient(-45deg, #eaafc8, #654ea3);
+    align-items: center;
+    /*background-image: linear-gradient(45deg, #3401c2, #3401c2, #d80101, white,
+     #d80101, #3401c2, #3401c2);*/
+    
+    /*background-color: rgb(160, 99, 181);*/
 }
 
 .layout{
-    min-height: 100vh;
+    min-height: 65vh;
     min-width: 360px;
-    max-width: 100vw;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
