--- a/src/components/views/homepage.module.css
+++ b/src/components/views/homepage.module.css
@@ -5,14 +5,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:flex-start;
+    justify-content:center;
     /* background-color: brown; */
     overflow: scroll;
 }
 
 .bannerContainer{
     height: 50vh;
-    max-height: 400px;
+    
     max-width: 800px;   
     overflow: hidden;
     background-attachment: fixed;
@@ -33,7 +33,8 @@
 }
 
 .latest{
-    height: 40vh;
+    max-height: 400px;
+    height: 35vh;
     display: flex;
     flex-direction: column;
     align-items: center;
