--- a/src/style/app.css
+++ b/src/style/app.css
@@ -7,11 +7,10 @@ body{
     min-height: 100vh;
     min-width: 360px;
     max-width: 100vw;
-
     display: flex;
     flex-direction: column;
     background-image: linear-gradient(-45deg, #eaafc8, #654ea3);
-    /* align-items: center; */
+    align-items: center;
     /*background-image: linear-gradient(45deg, #3401c2, #3401c2, #d80101, white,
      #d80101, #3401c2, #3401c2);*/
     
