--- a/src/components/navbarStyle.module.css
+++ b/src/components/navbarStyle.module.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Staatliches&display=swap');
+
 
 .navbar{
-    background-color: rgb(243, 247, 247);
+    background-color: rgb(206, 3, 3);
     display: flex;
     flex-direction: column;
     height: 15vh;
@@ -13,7 +15,7 @@
 }
 
 .navbarContainer{
-    background-color: rgb(243, 247, 247);
+    background-color: rgb(206, 3, 3);
     display: flex;
     height: 10vh;
     width: 100%;
@@ -71,12 +73,15 @@
 }
 .title{
     font-family: 'Staatliches', cursive;
-    font-size: x-small;
+    font-family: 'Racing Sans One', cursive;
+    font-size: 11px;
+    color: azure;
+    text-shadow: 0 0 10px black;
 }
 
 @media (min-width: 600px){
     .title{
-        font-size: 40px;
+        font-size: 30px;
     }
 }
 
