--- a/src/style/app.css
+++ b/src/style/app.css
@@ -9,7 +9,7 @@ body{
     max-width: 100vw;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(-45deg, #eaafc8, #654ea3);
+    /* background-image: linear-gradient(-45deg, #b4afae, #f7f3f1); */
     align-items: center;
     /*background-image: linear-gradient(45deg, #3401c2, #3401c2, #d80101, white,
      #d80101, #3401c2, #3401c2);*/
