--- a/src/components/navbarStyle.module.css
+++ b/src/components/navbarStyle.module.css
@@ -85,8 +85,6 @@
     }
 }
 
-
-
 .menu{
     background-color: rgb(0, 0, 0);
     height: 60px;
@@ -101,4 +99,9 @@
     border-color: white;
     color: white;
     box-shadow: 0 0 5px black;
+
+    background-image: url('../assets/gearIcon.png');
+    background-size: 55%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
