--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,7 +1,7 @@
 .footer{
     
     background-color: rgb(199, 197, 197);
-    min-height: 15vh;
+    min-height: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,7 +28,7 @@
 .img{
     aspect-ratio: 3/2;
     object-fit: contain;
-    mix-blend-mode: color-burn;
+    /* mix-blend-mode: color-burn; */
     height: 50px;
     width: 50px;
     color: white;
