--- a/src/style/app.css
+++ b/src/style/app.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    min-height: 100vh;
+    height: 100vh;
     min-width: 360px;
     max-width: 100vw;
     display: flex;
@@ -18,7 +18,7 @@ body{
 }
 
 .layout{
-    min-height: 65vh;
+    min-height: 70vh;
     min-width: 360px;
     max-width: 800px;
     display: flex;
