--- a/src/components/UI/newsCard/newsCard.module.css
+++ b/src/components/UI/newsCard/newsCard.module.css
@@ -1,8 +1,10 @@
 .newsCard{
+    width: 83vw;
+    height: 15vh;
     max-width: 800px;
     min-width: 260px;
-    max-height: 25vw;
-    min-height: 15vw;
+    max-height: 100px;
+    min-height: 50px;
     overflow: hidden;
     display: flex;
     align-items: center;
