--- a/src/components/views/addContent/addContent.module.css
+++ b/src/components/views/addContent/addContent.module.css
@@ -1,8 +1,14 @@
+.textarea,
+.input,
+.fileInput{
+    width: 80vw;
+    max-width: 600px;
+}
+
 .textarea{
     margin-top: 8px;
     margin-bottom: 8px;
-    width: 90vw;
-    max-width: 780px;
+
     height: 25vh;
     max-height: 400px;
 }
@@ -10,11 +16,13 @@
 .input{
     margin-top: 8px;
     margin-bottom: 8px;
-    width: 70%;
 }
 .fileInput{
     margin: 8px;
     padding-bottom: 10px;
-    width: 70%;
 }
 
+.previewImg{
+    width: 70vw;
+    max-width: 400px;
+}
