--- a/src/components/UI/newsCard/newsCard.module.css
+++ b/src/components/UI/newsCard/newsCard.module.css
@@ -12,7 +12,10 @@
     background-image: linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283);
     padding-right: 20px;
 }
-
+a{
+    text-decoration: none;
+    color: black;
+}
 .newsCardImg{
     /* max-height: 100%; */
     width: 30%;
