--- a/src/style/app.css
+++ b/src/style/app.css
@@ -5,8 +5,10 @@
 
 body{
     height: 100vh;
+    width: 100vw;
     min-width: 360px;
     max-width: 100vw;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     /* background-image: linear-gradient(-45deg, #b4afae, #f7f3f1); */
