--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,14 +1,18 @@
 .footer{
     background-color: rgb(199, 197, 197);
-    min-height: 10vh;
+
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
     position: fixed;
     bottom: 0;
     width: 100%;
     max-width: 800px;
+
+    font-size:xx-small;
 }
 
 .some{
@@ -28,8 +32,8 @@
     aspect-ratio: 3/2;
     object-fit: contain;
     /* mix-blend-mode: color-burn; */
-    height: 50px;
-    width: 50px;
+    height: 25px;
+    width: 25px;
     color: white;
     overflow: hidden;
     border-radius: 10px;
