--- a/src/style/app.css
+++ b/src/style/app.css
@@ -5,25 +5,22 @@
 
 body{
     height: 100vh;
-    width: 100vw;
+/*  width: 100vw;
     min-width: 360px;
     max-width: 100vw;
     min-width: 100vw;
     display: flex;
     flex-direction: column;
     /* background-image: linear-gradient(-45deg, #b4afae, #f7f3f1); */
-    align-items: center;
-    /*background-image: linear-gradient(45deg, #3401c2, #3401c2, #d80101, white,
-     #d80101, #3401c2, #3401c2);*/
-    
-    /*background-color: rgb(160, 99, 181);*/
-}
-main{
-    min-height: 100%;
-    width: 100%;
-    max-width: 800px;
-}
+    /* align-items: center;
+    background-image: linear-gradient(45deg, #120141, #19015c,  white, #610000, #3f0000); */
+    /* background-color: rgb(160, 99, 181); */
+    /* background-repeat: no-repeat; */
+} 
+
 .layout{
+    height: 100%;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
