--- a/src/components/UI/filterSearchBar/filterSearchBar.module.css
+++ b/src/components/UI/filterSearchBar/filterSearchBar.module.css
@@ -12,7 +12,7 @@
 
 .filterSearchList{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     list-style-type: none;
     width: 90%;
@@ -28,7 +28,7 @@
 }
 
 .searchInput{
-    width: 20vw;
+    width: 70%;
     font-size: smaller; 
 }
 
