--- a/src/components/navbarStyle.module.css
+++ b/src/components/navbarStyle.module.css
@@ -85,8 +85,9 @@
     }
 }
 
-.menu{
-    background-color: rgb(0, 0, 0);
+.menu, 
+.menuOn{
+    
     height: 45px;
     width: 45px;
     display: flex;
@@ -104,4 +105,14 @@
     background-size: 55%;
     background-repeat: no-repeat;
     background-position: center;
+}
+.menu{
+    background-color: rgb(0, 0, 0);
+}
+.menuOn{
+    background-color: rgb(168, 87, 87);
+}
+
+.deactivated{
+    color: darkgray;
 }
