add close to modal

--- a/src/components/UI/modals/modals.module.css
+++ b/src/components/UI/modals/modals.module.css
@@ -18,3 +18,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.closeX{
+    color: white;
+    position: relative;
+    right: -40%;
+}
