--- a/src/components/UI/filterSearchBar/filterSearchBar.module.css
+++ b/src/components/UI/filterSearchBar/filterSearchBar.module.css
@@ -35,7 +35,7 @@
     padding: 0 2px;
     font-size: 14px;
     /*selected*/
-    border-color: darkgreen;
+    border-color: black;
     border-width: 1px;
     border-style: solid;
     border-radius: 5px;
