--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,7 +1,6 @@
 .footer{
     background-color: rgb(199, 197, 197);
 
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,8 +8,7 @@
 
     position: fixed;
     bottom: 0;
-    width: 100%;
-    max-width: 800px;
+    width: -webkit-fill-available;
 
     font-size:xx-small;
 }
