--- a/src/components/UI/filterSearchBar/filterSearchBar.module.css
+++ b/src/components/UI/filterSearchBar/filterSearchBar.module.css
@@ -1,5 +1,12 @@
 .filterSearchBar{
     width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    padding: 2px 0;
 }
 
 @media screen and (min-width: 767){
