--- a/src/components/UI/modals/modals.module.css
+++ b/src/components/UI/modals/modals.module.css
@@ -7,7 +7,7 @@
 
     border-radius: 5px;
     box-shadow: 0 0 10px black;
-    background-color: rgba(0, 1, 1, 0.679);
+    background-color: rgba(0, 1, 1, 0.736);
 
     width: 90vw;
     height: 85vh;
@@ -23,4 +23,8 @@
     color: white;
     position: relative;
     right: -40%;
+    top: -35%;
+    background-color: rgb(15, 15, 15);
+    padding: 3px;
+    border-radius: 5px;
 }
