--- a/src/components/views/addContent/addContent.module.css
+++ b/src/components/views/addContent/addContent.module.css
@@ -20,6 +20,8 @@
     max-height: 400px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .input{
