--- a/src/components/UI/filterSearchBar/filterSearchBar.module.css
+++ b/src/components/UI/filterSearchBar/filterSearchBar.module.css
@@ -7,6 +7,7 @@
     width: 100%;
     position: fixed;
     background-color: rgb(23, 6, 117);
+    z-index: 3;
 }
 
 @media screen and (min-width: 767){
