--- a/src/components/UI/newsCard/newsCard.module.css
+++ b/src/components/UI/newsCard/newsCard.module.css
@@ -8,6 +8,8 @@
     /*background-image: linear-gradient(45deg, #eaafc8, #654ea3);*/
     background-image: linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283);
     padding-right: 20px;
+    position:relative;
+    
 }
 a{
     text-decoration: none;
@@ -40,4 +42,15 @@ a{
 }
 .date{
     font-size:12px;
+}
+.adminTools{
+    width: 70px;
+
+    position: absolute;
+    right:10px;
+    bottom: 10px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
