--- a/src/components/UI/appBtn/appBtn.css
+++ b/src/components/UI/appBtn/appBtn.css
@@ -10,6 +10,10 @@
   color: white;
   font-weight: bold;
   cursor: pointer;
+  border-radius: 5px;
+  
+  width: 200px;
+  height: 30px;
 }
 
 .secondary {
