--- a/src/components/UI/mainNewsCard/mainNews.module.css
+++ b/src/components/UI/mainNewsCard/mainNews.module.css
@@ -3,8 +3,7 @@
     --CardContentHeight: 150px;
 }
 
-.advCard,
-.cardContainer{
+.mainNewsCardContainer{
     background-color: white;
     border-radius: 5px;
     padding: 10px;
@@ -12,11 +11,12 @@
     margin: 5px;
     width: 85vw;
 }
+.mainNewsCardContainers{
+    margin-top: 20px;
+}
 
 
-.advContent,
-.newsCard{
-    height: var(--CardContentHeight);
+.mainNews{
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -24,12 +24,23 @@
     background-image: linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283);
     padding-right: 20px;
     position:relative; 
-}
-.advContent{
-    background-image:none;
-    background-color: grey;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
 }
 
+
+.mainNewsCardImg{
+    width: 115%;
+}
+
+.mainNewsContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/*take this from newsCard*/
 a{
     text-decoration: none;
     color: black;
@@ -53,13 +64,20 @@ a{
     object-position: center;
 }
 
-.contentContainer{
+.maincontentContainer{
+    display: flex;
     padding: 10px;
-    width: 70%;
+    width: 100%;
 }
-
 .newsCardTitle{
     font-size: 2.2vw;
+    color: black;
+    text-shadow: 0 0 5px rgb(252, 252, 252);
+    text-transform: capitalize;
+}
+
+.mainNewsCardTitle{
+    font-size: 5.2vw;
     color: black;
     text-shadow: 0 0 5px rgb(252, 252, 252);
     text-transform: capitalize;
@@ -90,8 +108,7 @@ a{
     justify-content: space-between;
     align-items: center;
 }
-
-@media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 768px) {
     .cardContainer{
         width: 85vw;
     }
