--- a/src/style/styleGeneral.module.css
+++ b/src/style/styleGeneral.module.css
@@ -7,9 +7,8 @@
 .view{
     height: 82vh;
     width: -webkit-fill-available;
-
-    margin-top: 12vh;
-
+    max-width: 900px;
+    margin: 12vh 0 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +17,7 @@
     overflow-y: scroll;
 
     font-family: var(--textFont);
+    position: relative;
 }
 
 .hidden{
