--- a/src/components/UI/mainNewsCard/mainNews.module.css
+++ b/src/components/UI/mainNewsCard/mainNews.module.css
@@ -10,6 +10,7 @@
     box-shadow: 0 0 5px black;
     margin: 5px;
     width: 85vw;
+    max-width: 895px;
     margin-top: 20px;
 }
 
@@ -80,6 +81,12 @@ a{
     text-shadow: 0 0 5px rgb(252, 252, 252);
     text-transform: capitalize;
 }
+
+@media screen and (min-width: 1600px) {
+    .mainNewsCardTitle {
+       font-size: 50px;
+    }
+  }
 
 .line{
     border-style: solid;
