--- a/src/components/UI/textEditor/textEditor.module.css
+++ b/src/components/UI/textEditor/textEditor.module.css
@@ -1,13 +1,7 @@
 .textEditorContainer{
-    background-color: aqua;
-    width: 85%;
-    max-width: 895px;
-}
-.editor{
-    background-color: bisque;
-
-}
-.preview{
-    background-color: rgb(151, 203, 222);
-    height: 50vh;
+    display: flex;
+    width: 86vw;
+    max-width: 900px;
+    flex-direction: column;
+    margin-bottom: 10px;
 }
