styling add content

--- a/src/components/views/addContent/addContent.module.css
+++ b/src/components/views/addContent/addContent.module.css
@@ -53,7 +53,7 @@
 }
 
 .panel{
-    width: 60%;
+    width: 90%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
