--- a/src/components/views/about/styleAbout.module.css
+++ b/src/components/views/about/styleAbout.module.css
@@ -7,7 +7,15 @@
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 10px;
+    text-align: center;
 }
 .installImg{
     width: 200px;
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
