--- a/src/style/styleGeneral.module.css
+++ b/src/style/styleGeneral.module.css
@@ -64,3 +64,11 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #272626; 
 }
+
+.flexCenter{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
