--- a/src/components/navbarStyle.module.css
+++ b/src/components/navbarStyle.module.css
@@ -18,7 +18,7 @@
     background-color: rgb(206, 3, 3);
     display: flex;
     height: 10vh;
-    width: 100%;
+    width: 100vw;
     justify-content: space-around;
     align-items: center;
 }
