--- a/src/style/app.css
+++ b/src/style/app.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body{
+body, .darkBody{
     height: 100vh;
 /*  width: 100vw;
     min-width: 360px;
@@ -16,9 +16,15 @@ body{
     background-image: linear-gradient(45deg, #120141, #19015c,  white, #610000, #3f0000); */
     /* background-color: rgb(160, 99, 181); */
     /* background-repeat: no-repeat; */
+    
 } 
 
-.layout{
+.darkBody{
+    background-color: #333;
+}
+
+.layout,
+.layoutDark{
     height: 100%;
     max-height: 100vh;
     display: flex;
@@ -27,6 +33,10 @@ body{
     align-items: center;
     position: relative;
 }
+
+/* .layoutDark{
+    background-color: #333;
+} */
 
 /* 
     background-image: url('../assets/backgroundFlags.jpg');
