--- a/src/components/navbarStyle.module.css
+++ b/src/components/navbarStyle.module.css
@@ -5,7 +5,7 @@
     background-color: rgb(206, 3, 3);
 
     height: 12vh;
-    width: -webkit-fill-available;
+    width: 100vw;
 
     display: flex;
     flex-direction: column;
