--- a/src/components/views/singlePage/singlePage.module.css
+++ b/src/components/views/singlePage/singlePage.module.css
@@ -1,3 +1,23 @@
+.single{
+  min-height: 83vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.top{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .singleImage {
   width: 93%;
 }
@@ -8,10 +28,6 @@
   width: 93vw;
   max-width: 900px;
   text-transform: capitalize;
-}
-
-.singleTags {
-  font-size: 10px;
 }
 
 .capitalStart {
