--- a/src/components/views/contenido/styleContent.module.css
+++ b/src/components/views/contenido/styleContent.module.css
@@ -12,7 +12,7 @@
 .stack{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 
 }
 .rightColumnAdv{
