--- a/src/components/UI/appBtn/appBtn.css
+++ b/src/components/UI/appBtn/appBtn.css
@@ -46,7 +46,7 @@
 }
 
 .terceary {
-  padding: 0 2px;
+  padding: 1px 2px;
   font-size: 14px;
   border-color: white;
   color: white;
@@ -55,4 +55,5 @@
   border-radius: 5px;
   margin: 17px 0;
   background-color: rgba(2, 2, 75, 0);
+  text-transform: uppercase;
 }
