--- a/src/components/UI/mainNewsCard/mainNews.module.css
+++ b/src/components/UI/mainNewsCard/mainNews.module.css
@@ -4,7 +4,7 @@
 }
 
 .mainNewsCardContainer{
-    background-color: white;
+    background-color: rgb(240,240,240);
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 5px black;
