--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,17 +1,21 @@
-.footer{
-    background-color: rgb(199, 197, 197);
-
+.footer,
+.darkFooter{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
     position: fixed;
     bottom: 0;
     width: 100vw;
-
-
     font-size:xx-small;
+}
+.footer{
+    background-color: rgb(199, 197, 197);
+}
+
+.darkFooter{
+    background-color: rgb(43,43,43);
+    box-shadow:2px 2px 5px white;
 }
 
 .some{
@@ -31,9 +35,9 @@
     aspect-ratio: 3/2;
     object-fit: contain;
     /* mix-blend-mode: color-burn; */
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
     color: white;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 3px;
 }
