--- a/src/style/styleGeneral.module.css
+++ b/src/style/styleGeneral.module.css
@@ -4,7 +4,7 @@
 }
 
 .view{
-    height: 82vh;
+    height: 85vh;
     width: -webkit-fill-available;
     max-width: 950px;
     margin: 12vh 0 0 auto;
@@ -19,6 +19,12 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     position: relative;
+}
+
+@media {
+  .view{
+    height: 82vh;
+  }
 }
 
 .splitParragraph {
