light mode text editor text

--- a/src/components/UI/textEditor/textEditor.module.css
+++ b/src/components/UI/textEditor/textEditor.module.css
@@ -6,6 +6,9 @@
     flex-direction: column;
     margin-bottom: 10px;
 }
-.darkTextEditorContainer{
+.textEditorContainer{
     color:white;
+}
+.darkTextEditorContainer{
+    color:black;
 }
