--- a/src/components/UI/modals/modals.module.css
+++ b/src/components/UI/modals/modals.module.css
@@ -48,3 +48,11 @@
     color: red;
     cursor: pointer;
 }
+
+.modalContentSize{
+    width:90%;
+    min-height:90%;
+    display:flex;
+    flex-direction:column;
+    
+}
